--- a/ooresults/templates/results_tab_content.html
+++ b/ooresults/templates/results_tab_content.html
@@ -21,7 +21,7 @@ $def with (results)
       <form id="res.pdfResult.form" class="form-container" onsubmit="res_submitPdfResult(); return false;">
          <div>
           <input id="pdf_r_i" name="res_include_dns" type="checkbox" value="res.include_dns"/>
-          <label for="res.include_dns">Include not started competitors</label>
+          <label for="pdf_r_i">Include not started competitors</label>
         </div>
         <p></p>
         <button type="submit" class="btn">Create PDF</button>
@@ -38,7 +38,7 @@ $def with (results)
       <form id="res.pdfSplittimes.form" class="form-container" onsubmit="res_submitPdfSplittimes(); return false;">
          <div>
           <input id="pdf_sp_l" name="res_landscape" type="checkbox" value="res.landscape"/>
-          <label for="res.landscape">Landscape (page orientation)</label>
+          <label for="pdf_sp_l">Landscape (page orientation)</label>
         </div>
         <p></p>
         <button type="submit" class="btn">Create PDF</button>
