--- a/ooresults/templates/add_class.html
+++ b/ooresults/templates/add_class.html
@@ -44,17 +44,17 @@ $else:
         <input id="cls.addId" name="id" type="text" value="$id" hidden/>
         <table id="cls.addFormTable">
             <tr>
-                <th class="input-header"><label for="name">Name *</label></th>
-                <td><input name="name" type="text" value="$name" required onchange="mark_label(this)"/></td>
+                <th class="input-header"><label for="cla_name">Name *</label></th>
+                <td><input id="cla_name" name="name" type="text" value="$name" required oninput="mark_label(this)"/></td>
             </tr>
             <tr>
-                <th class="input-header"><label for="short_name">Short name</label></th>
-                <td><input name="short_name" type="text" value="$short_name" onchange="mark_label(this)"/></td>
+                <th class="input-header"><label for="cla_shortName">Short name</label></th>
+                <td><input id="cla_shortName" name="short_name" type="text" value="$short_name" oninput="mark_label(this)"/></td>
             </tr>
             <tr>
-                <th class="input-header"><label for="course">Course</label></th>
+                <th class="input-header"><label for="cla_courseId">Course</label></th>
                 <td>
-                    <select id="course_id" name="course_id" onchange="mark_label(this)">
+                    <select id="cla_courseId" name="course_id" oninput="mark_label(this)">
                     $if course_id is None:
                         <option value="" selected></option>
                     $else:
@@ -68,13 +68,13 @@ $else:
                 </td>
             </tr>
             <tr>
-                <th class="input-header"><label for="voided_legs">Voided legs</label></th>
-                <td><input name="voided_legs" type="text" placeholder="c1-c2, c3-c4, ..." value="$format_voided_legs(params.voided_legs)" onchange="mark_label(this)"/></td>
+                <th class="input-header"><label for="cla_voidedLegs">Voided legs</label></th>
+                <td><input id="cla_voidedLegs" name="voided_legs" type="text" placeholder="c1-c2, c3-c4, ..." value="$format_voided_legs(params.voided_legs)" oninput="mark_label(this)"/></td>
             </tr>
             <tr>
-                <th class="input-header"><label for="type">Type</label></th>
+                <th class="input-header"><label for="cla_type">Type</label></th>
                 <td>
-                    <select id="type" name="type" onchange="mark_label(this)">
+                    <select id="cla_type" name="type" oninput="mark_label(this)">
                         $for value, text in (('standard', 'Standard'), ('net', 'Net'), ('score', 'Score'))
                             $if value == params.otype:
                                 <option value="$str(value)" selected>$text</option>
@@ -84,9 +84,9 @@ $else:
                 </td>
             </tr>
             <tr>
-                <th class="input-header"><label for="startControl">Using start control</label></th>
+                <th class="input-header"><label for="cla_startControl">Using start control</label></th>
                 <td>
-                    <select id="startControl" name="startControl" onchange="mark_label(this)">
+                    <select id="cla_startControl" name="startControl" oninput="mark_label(this)">
                         $for value, text in (('if_punched', 'If punched'), ('no', 'No'), ('yes', 'Yes'))
                             $if value == params.using_start_control:
                                 <option value="$str(value)" selected>$text</option>
@@ -96,9 +96,9 @@ $else:
                 </td>
             </tr>
             <tr>
-                <th class="input-header"><label for="handicap">Apply handicap rule</label></th>
+                <th class="input-header"><label for="cla_handicap">Apply handicap rule</label></th>
                 <td>
-                    <select id="handicap" name="handicap" onchange="mark_label(this)">
+                    <select id="cla_handicap" name="handicap" oninput="mark_label(this)">
                         $for value, text in ((0, 'No'), (1, 'Yes'))
                             $if value == params.apply_handicap_rule:
                                 <option value="$str(value)" selected>$text</option>
@@ -108,20 +108,20 @@ $else:
                 </td>
             </tr>
             <tr>
-                <th class="input-header"><label for="massStart">Mass start</label></th>
-                <td><input id="massStart" name="massStart" type="time" step="1" value="$format_date(params.mass_start)" onchange="mark_label(this)"/></td>
+                <th class="input-header"><label for="cla_massStart">Mass start</label></th>
+                <td><input id="cla_massStart" name="massStart" type="time" step="1" value="$format_date(params.mass_start)" oninput="mark_label(this)"/></td>
             </tr>
             <tr>
-                <th class="input-header"><label for="timeLimit">Time limit</label></th>
-                <td><input id="timeLimit" name="timeLimit" type="str" pattern="[0-9]+:[0-5][0-9]" placeholder="m:ss" value="$format_time(params.time_limit)" onchange="mark_label(this)"/></td>
+                <th class="input-header"><label for="cla_timeLimit">Time limit</label></th>
+                <td><input id="cla_timeLimit" name="timeLimit" type="text" pattern="[0-9]+:[0-5][0-9]" placeholder="m:ss" value="$format_time(params.time_limit)" oninput="mark_label(this)"/></td>
             </tr>
             <tr>
-                <th class="input-header"><label for="penaltyControls">Penalty controls</label></th>
-                <td><input id="penaltyControls" name="penaltyControls" type="number" min="1" placeholder="seconds" value="$format_int(params.penalty_controls)" onchange="mark_label(this)"/></td>
+                <th class="input-header"><label for="cla_penaltyControls">Penalty controls</label></th>
+                <td><input id="cla_penaltyControls" name="penaltyControls" type="number" min="1" placeholder="seconds" value="$format_int(params.penalty_controls)" oninput="mark_label(this)"/></td>
             </tr>
             <tr>
-                <th class="input-header"><label for="penaltyOvertime">Penalty time limit</label></th>
-                <td><input id="penaltyOvertime" name="penaltyOvertime" type="number" min="1" placeholder="seconds" value="$format_int(params.penalty_overtime)" onchange="mark_label(this)"/></td>
+                <th class="input-header"><label for="cla_penaltyOvertime">Penalty time limit</label></th>
+                <td><input id="cla_penaltyOvertime" name="penaltyOvertime" type="number" min="1" placeholder="seconds" value="$format_int(params.penalty_overtime)" oninput="mark_label(this)"/></td>
             </tr>
         </table>
         <p></p>
