--- a/ooresults/templates/add_course.html
+++ b/ooresults/templates/add_course.html
@@ -20,20 +20,20 @@ $else:
         <input id="cou.addId" name="id" type="text" value="$id" hidden/>
         <table id="cou.addFormTable">
             <tr>
-                <th class="input-header"><label for="name">Name *</label></th>
-                <td><input name="name" type="text" value="$name" required onchange="mark_label(this)"/></td>
+                <th class="input-header"><label for="cou_name">Name *</label></th>
+                <td><input id="cou_name" name="name" type="text" value="$name" required oninput="mark_label(this)"/></td>
             </tr>
             <tr>
-                <th class="input-header"><label for="length">Length</label></th>
-                <td><input name="length" type="number" min="0" max="99999" placeholder="meters" value="$length" onchange="mark_label(this)"/></td>
+                <th class="input-header"><label for="cou_length">Length</label></th>
+                <td><input id="cou_length" name="length" type="number" min="0" max="99999" placeholder="meters" value="$length" oninput="mark_label(this)"/></td>
             </tr>
             <tr>
-                <th class="input-header"><label for="climb">Climb</label></th>
-                <td><input name="climb" type="number" min="0" max="99999" placeholder="meters" value="$climb" onchange="mark_label(this)"/></td>
+                <th class="input-header"><label for="cou_climb">Climb</label></th>
+                <td><input id="cou_climb" name="climb" type="number" min="0" max="99999" placeholder="meters" value="$climb" oninput="mark_label(this)"/></td>
             </tr>
             <tr>
-                <th class="input-header"><label for="controls">Controls</label></th>
-                <td><input name="controls" type="text" placeholder="c1 - c2 - c3" value="$controls" onchange="mark_label(this)"/></td>
+                <th class="input-header"><label for="cou_controls">Controls</label></th>
+                <td><input id="cou_controls" name="controls" type="text" placeholder="c1 - c2 - c3" value="$controls" oninput="mark_label(this)"/></td>
             </tr>
         </table>
         <p></p>
