--- a/ooresults/templates/series_tab_content.html
+++ b/ooresults/templates/series_tab_content.html
@@ -26,7 +26,7 @@ $def with (results)
       <form id="ser.pdfResult.form" class="form-container" onsubmit="ser_submitPdfResult(); return false;">
         <div>
           <input id="oo_1" name="ser_landscape" type="checkbox" value="ser.landscape"/>
-          <label for="ser.landscape">Landscape (page orientation)</label>
+          <label for="oo_1">Landscape (page orientation)</label>
         </div>
         <p></p>
         <button type="submit" class="btn">Create PDF</button>
