First webtests added

--- a/ooresults/templates/events_tab_content.html
+++ b/ooresults/templates/events_tab_content.html
@@ -2,7 +2,7 @@ $def with (events_table)
  
 <!-- Tab content -->
 <div id="Events" class="tabcontent">
-  <div class="actions">
+  <div id="eve_actions" class="actions">
     <!-- Trigger/Open The Modal -->
     <button id="evnt.myBtnReload" onclick="evnt_update()">Reload</button>
     <button id="evnt.myBtnAdd" onclick="evnt_myAdd()">Add event ...</button>
