--- a/ooresults/templates/main.html
+++ b/ooresults/templates/main.html
@@ -1,7 +1,7 @@
 $def with (events_tab_content, entries_tab_content, classes_tab_content, courses_tab_content, results_tab_content, series_tab_content, competitors_tab_content, clubs_tab_content)
 
 <!-- Tab links -->
-<div class="tab">
+<div id="tabs" class="tab">
   <button class="tablinks active" onclick="evnt_update(); openTab(event, 'Events')">Events</button>
   <button id="tab.entries" disabled class="tablinks" onclick="entr_update(); openTab(event, 'Entries')">Entries</button>
   <button id="tab.classes" disabled class="tablinks" onclick="cls_update(); openTab(event, 'Classes')">Classes</button>
