--- a/ooresults/templates/base.html
+++ b/ooresults/templates/base.html
@@ -10,7 +10,7 @@ $def with (page)
     <meta http-equiv="Expires" content="0" />
     <script src="mystatic/w3.js"></script>
 </head>
-<body onpageshow="myfunction()">
+<body style="margin: 0px;" onpageshow="myfunction()">
 
 $:page
 
