--- a/ooresults/static/style-tab.css
+++ b/ooresults/static/style-tab.css
@@ -1,8 +1,8 @@
 /* Style the tab */
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  border-bottom: 1px solid #ccc;
+  background-color: Canvas;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -30,6 +30,4 @@
 /* Style the tab content */
 .tabcontent {
   display: none;
-  border: 1px solid #ccc;
-  border-top: none;
 }
